Fix CSS issues on smaller screens #3

--- a/src/pages/components/countriest-list/components/country-details-dialog/CountryDetails.module.scss
+++ b/src/pages/components/countriest-list/components/country-details-dialog/CountryDetails.module.scss
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   gap: 5rem;
-  margin-top: 5rem;
+  margin-top: 3rem;
 }
 
 .rightPartCountryInfo {
